crates/native/tests/snapshots/parser_tests__schema_with_all_operations.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(\"schema { query: Query mutation: Mutation subscription: Subscription }\")"
---
Document {
    source: Source {
        code: "schema { query: Query mutation: Mutation subscription: Subscription }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        TypeSystem(
            Schema(
                SchemaDefinition {
                    description: None,
                    directives: [],
                    query: Some(
                        TypeName(
                            Name(
                                "Query",
                            ),
                        ),
                    ),
                    mutation: Some(
                        TypeName(
                            Name(
                                "Mutation",
                            ),
                        ),
                    ),
                    subscription: Some(
                        TypeName(
                            Name(
                                "Subscription",
                            ),
                        ),
                    ),
                },
            ),
        ),
    ],
}
